added basic getters
